--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +9,63 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Crystals Collector Game</title>
 </head>
+
 <body>
-    <box>Crystals Collector!</box>
-    <script src="assets/javascript/game.js"></script>
+    <div class="container">
+        <div class="row">
+            <box>Crystals Collector!</box>
+        </div>
+        <div class="row">
+            <p class="instructions">You will be given a random number at the start of the game.
+            <br>
+            <br>There are four crystals below. By clicking ona crystal you will add a specific amount of points to yout total
+            score.
+            <br>
+            <br> You win the game by matchimg your total score to random number, you lose the game uf your total score gets
+            above the random number.
+            <br>
+            <br> The value of each crystal is hidden from you until you click on it.
+            <br>
+            <br> Each time when the game starts, the game will change the values of each crystal.
+            </p>
+        </div>
+        <!-- <div class="row"> -->
+            <div class="col-md-5">
+                <div class="computerRandomNumber"></div>
+            </div>
+            <div class="col-md-5">
+                <div class="scorebox">
+                    <h4>
+                        <!-- Wins:
+                       Losses: -->
+                    </h4>
+                </div>
+            </div>
+        </div>
+        <div class="row crystals">
+            <div class="col=md-5">
+               <!-- add in images source -->
+                <img src="assets/images/" class="press" id="pinkCrystal">
+                <img src="" class="press" id="blueCrystal">
+                <img src="" class="press" id="yellowCrystal">
+                <img src="" class="press" id="greenCrystal">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-5">
+                <div class="score">
+                    <h4>Your total score is: </h4>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-5">
+                <div class="score">
+                </div>
+            </div>
+        </div>
+        <script src="assets/javascript/game.js"></script>
+    </div>
 </body>
+
 </html>
