added some styling, still need to fix some jQuery things

--- a/assets/images/Crystals Collector Game.htm
+++ b/assets/images/Crystals Collector Game.htm
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
+<!-- saved from url=(0060)file:///Users/ericacohen/Desktop/code/week-4-game/index.html -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="./Crystals Collector Game_files/reset.css">
+    <link rel="stylesheet" type="text/css" href="./Crystals Collector Game_files/style.css">
+    <script src="./Crystals Collector Game_files/jquery.min.js"></script>
     <title>Crystals Collector Game</title>
 </head>
 
@@ -45,10 +44,10 @@
         </div>
         <div class="row crystals">
             <div class="col=md-5">
-                <img src="assets/images/pink.jpg" class="press" id="pinkCrystal">
-                <img src="assets/images/blue.jpg" class="press" id="blueCrystal">
-                <img src="assets/images/yellow.jpg" class="press" id="yellowCrystal">
-                <img src="assets/images/green.jpg" class="press" id="greenCrystal">
+                <img src="./Crystals Collector Game_files/pink.jpg" class="press" id="pinkCrystal">
+                <img src="./Crystals Collector Game_files/blue.jpg" class="press" id="blueCrystal">
+                <img src="./Crystals Collector Game_files/yellow.jpg" class="press" id="yellowCrystal">
+                <img src="./Crystals Collector Game_files/green.jpg" class="press" id="greenCrystal">
             </div>
         </div>
         <div class="row">
@@ -64,8 +63,8 @@
                 </div>
             </div>
         </div>
-        <script src="assets/javascript/game.js"></script>
-    </div>
-</body>
+        <script src="./Crystals Collector Game_files/game.js"></script>
+    
 
-</html>
+
+</body></html>
