--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <box>Crystals Collector!</box>
+            <div class="box">Crystals Collector!</div>
         </div>
         <div class="row" id="instructions">
             <p class="instructions">You will be given a random number at the start of the game.
@@ -32,7 +32,10 @@
         </div>
         <!-- <div class="row"> -->
             <div class="col-md-5">
-                <div class="computerRandomNumber"></div>
+                    <h4>
+                <div id="goal"> 
+                    Goal Number: <span class="computerRandomNumber"></span>
+                </div>
             </div>
             <div class="col-md-5">
                 <div class="scorebox">
