more updates to CSS

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="col-md-5">
                     <h4>
                 <div id="goal"> 
-                    Goal Number: <span class="computerRandomNumber"></span>
+                    Goal Number: <br><span class="computerRandomNumber"></span>
                 </div>
             </div>
             <div class="col-md-5">
